<resources>
    <string name="app_name">Imegmacska</string>
    <string name="login">Bejelentkezés</string>
    <string name="sign_up">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="password_again">Jelszó ismét</string>
    <string name="not_registered">Nem regisztrált még?</string>
    <string name="email">Email cím</string>
    <string name="like">Akarom</string>
    <string name="dislike">Nem Tetszik</string>
</resources>
